--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,6 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GOOGLE_CLIENT_ID=342381738893-hlkh7estkma6soormvv0qhc381sibbgh.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
