--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,6 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 GOOGLE_CLIENT_ID=342381738893-hlkh7estkma6soormvv0qhc381sibbgh.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+GOOGLE_CLIENT_ID=342381738893-regut2cavn03ijvqakhg9qm96bg1hff4.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
