--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,7 @@ MEMCACHED_HOST=127.0.0.1
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
-
+#dfsfsaf
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.yandex.com
 MAIL_PORT=465
