--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/socialite": "^5.11",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.0",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "rawilk/laravel-printing": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
