--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.0",
         "maatwebsite/excel": "^3.1",
+        "phpviet/number-to-words": "^1.3",
         "rawilk/laravel-printing": "^3.0"
     },
     "require-dev": {
